# base_gdnative

./: .gitignore  .gitmodules  LICENSE  README.md
godot/: Example.gd  Example.tscn  gdexample.gdns  gdnativelibrary.gdnlib  project.godot
godot/scripts/: SimpleClass.gdns
lib/: CMakeLists.txt
native/code/: CMakeLists.txt
native/code/src/: init.cpp
native/code/src/gdnative/: AutoRegister.hpp  GodotLibrary.cpp
